exports[`invalid(1): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(1): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^2.0.0"}}
    |                                                                 ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^1.0.0"}}

Suggestion 2/2: Use the \`dependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0"}, "dependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(10): {\"peerDependencies\": {\"foo\": \">2.0.0 <1.0.0\"}, \"dependencies\": {\"foo\": \"*\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": ">2.0.0 <1.0.0"}, "dependencies": {"foo": "*"}}

`;

exports[`invalid(10): {\"peerDependencies\": {\"foo\": \">2.0.0 <1.0.0\"}, \"dependencies\": {\"foo\": \"*\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": ">2.0.0 <1.0.0"}, "dependencies": {"foo": "*"}}
    |                                                                        ^^^ Dependency \`foo\` in \`dependencies\` uses range \`*\`, which does not overlap its peer dependency range \`>2.0.0 <1.0.0\`.

Suggestion 1/1: Use the \`dependencies\` range \`*\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "*"}, "dependencies": {"foo": "*"}}

`;

exports[`invalid(11): {\"peerDependencies\": {\"foo\": \"*\"}, \"dependencies\": {\"foo\": \">2.0.0 <1.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "*"}, "dependencies": {"foo": ">2.0.0 <1.0.0"}}

`;

exports[`invalid(11): {\"peerDependencies\": {\"foo\": \"*\"}, \"dependencies\": {\"foo\": \">2.0.0 <1.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "*"}, "dependencies": {"foo": ">2.0.0 <1.0.0"}}
    |                                                            ^^^^^^^^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`>2.0.0 <1.0.0\`, which does not overlap its peer dependency range \`*\`.

Suggestion 1/1: Use the peer dependency range \`*\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "*"}, "dependencies": {"foo": "*"}}

`;

exports[`invalid(12): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"peerDependenciesMeta\": {\"foo\": {\"optional\": true}}, \"optionalDependencies\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "peerDependenciesMeta": {"foo": {"optional": true}}, "optionalDependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(12): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"peerDependenciesMeta\": {\"foo\": {\"optional\": true}}, \"optionalDependencies\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "peerDependenciesMeta": {"foo": {"optional": true}}, "optionalDependencies": {"foo": "^2.0.0"}}
    |                                                                                                                              ^^^^^^^^ Dependency \`foo\` in \`optionalDependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0\` in \`optionalDependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "peerDependenciesMeta": {"foo": {"optional": true}}, "optionalDependencies": {"foo": "^1.0.0"}}

Suggestion 2/2: Use the \`optionalDependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0"}, "peerDependenciesMeta": {"foo": {"optional": true}}, "optionalDependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(13): {\"peerDependencies\": {\"foo\": \"^2.0.0\", \"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.5.0\", \"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^2.0.0", "foo": "^1.0.0"}, "dependencies": {"foo": "^1.5.0", "foo": "^2.0.0"}}

`;

exports[`invalid(13): {\"peerDependencies\": {\"foo\": \"^2.0.0\", \"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.5.0\", \"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^2.0.0", "foo": "^1.0.0"}, "dependencies": {"foo": "^1.5.0", "foo": "^2.0.0"}}
    |                                                                                                   ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0", "foo": "^1.0.0"}, "dependencies": {"foo": "^1.5.0", "foo": "^1.0.0"}}

Suggestion 2/2: Use the \`dependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0", "foo": "^2.0.0"}, "dependencies": {"foo": "^1.5.0", "foo": "^2.0.0"}}

`;

exports[`invalid(14): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.5.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^1.5.0"}, "dependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(14): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"dependencies\": {\"foo\": \"^1.5.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^1.5.0"}, "dependencies": {"foo": "^2.0.0"}}
    |                                                                                                    ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^1.5.0"}, "dependencies": {"foo": "^1.0.0"}}

Suggestion 2/2: Use the \`dependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0"}, "dependencies": {"foo": "^1.5.0"}, "dependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(15): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^3.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}, \"optionalDependencies\": {\"bar\": \"^4.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^3.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"bar": "^4.0.0"}}

`;

exports[`invalid(15): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^3.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}, \"optionalDependencies\": {\"bar\": \"^4.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^3.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"bar": "^4.0.0"}}
    |                                                                                  ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^3.0.0"}, "dependencies": {"foo": "^1.0.0"}, "optionalDependencies": {"bar": "^4.0.0"}}

Suggestion 2/2: Use the \`dependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0", "bar": "^3.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"bar": "^4.0.0"}}

`;

exports[`invalid(15): {\"peerDependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^3.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}, \"optionalDependencies\": {\"bar\": \"^4.0.0\"}} 3`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^3.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"bar": "^4.0.0"}}
    |                                                                                                                             ^^^^^^^^ Dependency \`bar\` in \`optionalDependencies\` uses range \`^4.0.0\`, which does not overlap its peer dependency range \`^3.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^3.0.0\` in \`optionalDependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^3.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"bar": "^3.0.0"}}

Suggestion 2/2: Use the \`optionalDependencies\` range \`^4.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0", "bar": "^4.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"bar": "^4.0.0"}}

`;

exports[`invalid(2): {\"peerDependencies\": {\"foo\": \"^1.0.0 || ^3.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0 || ^3.0.0"}, "dependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(2): {\"peerDependencies\": {\"foo\": \"^1.0.0 || ^3.0.0\"}, \"dependencies\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0 || ^3.0.0"}, "dependencies": {"foo": "^2.0.0"}}
    |                                                                           ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0 || ^3.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0 || ^3.0.0\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0 || ^3.0.0"}, "dependencies": {"foo": "^1.0.0 || ^3.0.0"}}

Suggestion 2/2: Use the \`dependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0"}, "dependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"optionalDependencies\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "optionalDependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"optionalDependencies\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "optionalDependencies": {"foo": "^2.0.0"}}
    |                                                                         ^^^^^^^^ Dependency \`foo\` in \`optionalDependencies\` uses range \`^2.0.0\`, which does not overlap its peer dependency range \`^1.0.0\`.

Suggestion 1/2: Use the peer dependency range \`^1.0.0\` in \`optionalDependencies\`.:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "optionalDependencies": {"foo": "^1.0.0"}}

Suggestion 2/2: Use the \`optionalDependencies\` range \`^2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"foo": "^2.0.0"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"foo\": \"1.2.3\"}, \"dependencies\": {\"foo\": \"1.2.4\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "1.2.3"}, "dependencies": {"foo": "1.2.4"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"foo\": \"1.2.3\"}, \"dependencies\": {\"foo\": \"1.2.4\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "1.2.3"}, "dependencies": {"foo": "1.2.4"}}
    |                                                                ^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`1.2.4\`, which does not overlap its peer dependency range \`1.2.3\`.

Suggestion 1/2: Use the peer dependency range \`1.2.3\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "1.2.3"}, "dependencies": {"foo": "1.2.3"}}

Suggestion 2/2: Use the \`dependencies\` range \`1.2.4\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "1.2.4"}, "dependencies": {"foo": "1.2.4"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"foo\": \"1.0.0 - 2.0.0\"}, \"dependencies\": {\"foo\": \"^3.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "1.0.0 - 2.0.0"}, "dependencies": {"foo": "^3.0.0"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"foo\": \"1.0.0 - 2.0.0\"}, \"dependencies\": {\"foo\": \"^3.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "1.0.0 - 2.0.0"}, "dependencies": {"foo": "^3.0.0"}}
    |                                                                        ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`^3.0.0\`, which does not overlap its peer dependency range \`1.0.0 - 2.0.0\`.

Suggestion 1/2: Use the peer dependency range \`1.0.0 - 2.0.0\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "1.0.0 - 2.0.0"}, "dependencies": {"foo": "1.0.0 - 2.0.0"}}

Suggestion 2/2: Use the \`dependencies\` range \`^3.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "^3.0.0"}, "dependencies": {"foo": "^3.0.0"}}

`;

exports[`invalid(6): {\"peerDependencies\": {\"foo\": \"1.0.0+1.2.3-alpha\"}, \"dependencies\": {\"foo\": \"2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "1.0.0+1.2.3-alpha"}, "dependencies": {"foo": "2.0.0"}}

`;

exports[`invalid(6): {\"peerDependencies\": {\"foo\": \"1.0.0+1.2.3-alpha\"}, \"dependencies\": {\"foo\": \"2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "1.0.0+1.2.3-alpha"}, "dependencies": {"foo": "2.0.0"}}
    |                                                                            ^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`2.0.0\`, which does not overlap its peer dependency range \`1.0.0+1.2.3-alpha\`.

Suggestion 1/2: Use the peer dependency range \`1.0.0+1.2.3-alpha\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": "1.0.0+1.2.3-alpha"}, "dependencies": {"foo": "1.0.0+1.2.3-alpha"}}

Suggestion 2/2: Use the \`dependencies\` range \`2.0.0\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "2.0.0"}, "dependencies": {"foo": "2.0.0"}}

`;

exports[`invalid(7): {\"peerDependencies\": {\"foo\": \">1.2.3\"}, \"dependencies\": {\"foo\": \"<1.2.4\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": ">1.2.3"}, "dependencies": {"foo": "<1.2.4"}}

`;

exports[`invalid(7): {\"peerDependencies\": {\"foo\": \">1.2.3\"}, \"dependencies\": {\"foo\": \"<1.2.4\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": ">1.2.3"}, "dependencies": {"foo": "<1.2.4"}}
    |                                                                 ^^^^^^^^ Dependency \`foo\` in \`dependencies\` uses range \`<1.2.4\`, which does not overlap its peer dependency range \`>1.2.3\`.

Suggestion 1/2: Use the peer dependency range \`>1.2.3\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": ">1.2.3"}, "dependencies": {"foo": ">1.2.3"}}

Suggestion 2/2: Use the \`dependencies\` range \`<1.2.4\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "<1.2.4"}, "dependencies": {"foo": "<1.2.4"}}

`;

exports[`invalid(8): {\"peerDependencies\": {\"foo\": \">1.2.3 <1.2.4\"}, \"dependencies\": {\"foo\": \"*\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": ">1.2.3 <1.2.4"}, "dependencies": {"foo": "*"}}

`;

exports[`invalid(8): {\"peerDependencies\": {\"foo\": \">1.2.3 <1.2.4\"}, \"dependencies\": {\"foo\": \"*\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": ">1.2.3 <1.2.4"}, "dependencies": {"foo": "*"}}
    |                                                                        ^^^ Dependency \`foo\` in \`dependencies\` uses range \`*\`, which does not overlap its peer dependency range \`>1.2.3 <1.2.4\`.

Suggestion 1/1: Use the \`dependencies\` range \`*\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "*"}, "dependencies": {"foo": "*"}}

`;

exports[`invalid(9): {\"peerDependencies\": {\"foo\": \">1.2.3 <1.2.4 || 2\"}, \"dependencies\": {\"foo\": \"3\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": ">1.2.3 <1.2.4 || 2"}, "dependencies": {"foo": "3"}}

`;

exports[`invalid(9): {\"peerDependencies\": {\"foo\": \">1.2.3 <1.2.4 || 2\"}, \"dependencies\": {\"foo\": \"3\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": ">1.2.3 <1.2.4 || 2"}, "dependencies": {"foo": "3"}}
    |                                                                             ^^^ Dependency \`foo\` in \`dependencies\` uses range \`3\`, which does not overlap its peer dependency range \`>1.2.3 <1.2.4 || 2\`.

Suggestion 1/2: Use the peer dependency range \`>1.2.3 <1.2.4 || 2\` in \`dependencies\`.:
  1 | {"peerDependencies": {"foo": ">1.2.3 <1.2.4 || 2"}, "dependencies": {"foo": ">1.2.3 <1.2.4 || 2"}}

Suggestion 2/2: Use the \`dependencies\` range \`3\` in \`peerDependencies\`.:
  1 | {"peerDependencies": {"foo": "3"}, "dependencies": {"foo": "3"}}

`;
